# osborne-floppy-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  connector.kicad_sch  imd-to-bin.c  osborne-floppy-emulator.kicad_pcb  osborne-floppy-emulator.kicad_pro  osborne-floppy-emulator.kicad_sch  readwrite.pio  regulator.kicad_sch  rp2040.kicad_sch  sepic2.kicad_sch  shifter.kicad_sch  test.c
.cache/clangd/index/: address_mapped.h.9426DAFAA69ACCEB.idx  addressmap.h.220069209E7A600A.idx  asm_helper.S.B51D8B16AC12010B.idx  assert.h.1E4A3C8FDCC843D8.idx  binary_info.c.33E2D6DF45D6147D.idx  binary_info.h.5A99FF3F29DCDEA2.idx  bit_ops_aeabi.S.42D2B088CF94C976.idx  boot2_w25q080.S.5699D2E2E1DC17E1.idx  bootrom.c.729640B7EDBE7A6E.idx  bootrom.h.0606470D49FB16BD.idx  buffers.c.038E1C8856819FA1.idx  buffers.h.E66E7E7440C01082.idx  cdc_host.c.F2CB1B0C4002CBDB.idx  claim.c.143B3EAF7394007D.idx  claim.h.DD6945E013407322.idx  clocks.c.B8F9567183A5E44D.idx  clocks.h.4E8D7568C65B959C.idx  clocks.h.A45EB827F762D02B.idx  clocks.h.D7666399346B77DD.idx  code.h.76A9394D8A99C6EA.idx  config.h.095446C6C9373DF4.idx  config.h.C9FCF98A451BA6D5.idx  critical_section.c.0F553AD86D293D83.idx  critical_section.h.7FBDA1A7FFE487A0.idx  crt0.S.6234B9B92D3042E6.idx  datetime.c.A678FA7E065CA3B5.idx  datetime.h.E4EB10FD6C2DEB7B.idx  defs.h.3048F469C2783D6A.idx  disk.c.6A0AC5E4C776C040.idx  disk.h.4B4D7B68C5651E83.idx  diskio.h.11B2A880B8840135.idx  divider.S.29BDB91E7324AD19.idx  divider.S.54A5E51755E1C7F5.idx  divider_helper.S.4259A2CE5E6FD6FD.idx  double.h.D4E7DE298BB2FDB6.idx  double_aeabi.S.392093E453BDB597.idx  double_init_rom.c.3814DC17FD5B2827.idx  double_math.c.447EDF047D412074.idx  double_v1_rom_shim.S.3EAED5D1C28A19CA.idx  dreq.h.516A8C06F973379E.idx  (+151 more)
board/: connector.kicad_sch  fp-lib-table  osborne-floppy-emulator.kicad_pcb  osborne-floppy-emulator.kicad_prl  osborne-floppy-emulator.kicad_pro  osborne-floppy-emulator.kicad_sch  regulator.kicad_sch  rp2040.kicad_sch  sepic2.kicad_sch  shifter.kicad_sch  sym-lib-table  ~osborne-floppy-emulator.kicad_pcb.lck
board/custom-footprints.pretty/: QFN-56_EP_7x7_Pitch0.4mm_Extralong.kicad_mod
custom-footprints.pretty/: L_CommonModeChoke_Murata_5000_Series.kicad_mod
docs/: Board.md  Connecting with OpenOCD+GDB.md  Osborne Drive Interface.md  openocd.cfg  tuh?.txt
docs/.obsidian/: workspace.json
hardware_clocks/: clocks.c
pico_runtime/: runtime.c
report/: report.tex  summary.tex
src/: .clangd  CMakeLists.txt  buffers.c  buffers.h  compile_commands.json  core1.c  core1.h  disk.c  disk.h  ffconf.h  main.c  main.h  memory.c  memory.h  ofe.h  precompute-crc.c  readwrite.h  readwrite.pio  semihosting.c  tinyusb_test.c  tusb_config.h  usb_msc.c
src/.cache/clangd/index/: buffers.h.E66E7E7440C01082.idx  disk.h.4B4D7B68C5651E83.idx  main.h.42A19839E1332AF6.idx  memory.c.1F31F12F35F41683.idx  memory.h.363B5A57AE47BA4C.idx  ofe.h.E15A31EE689C8C49.idx  tinyusb_test.c.C4BCABFCD52F697B.idx  tusb_config.h.C9A8F85499A2CCD3.idx
